...

    <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:titleTextColor="@color/white"
            android:title="Weather"
            android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            android:background="@color/toolbar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        <TextView
                android:id="@+id/cityInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        <TextView
                android:id="@+id/cityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"/>

        <TextView
...
