<resources>
    <string name="app_name">Team 1</string>
    <string-array name="city_options">
        <item>Dallas</item>
        <item>New York</item>
        <item>Boston</item>
        <item>Illinois</item>
    </string-array>
</resources>